--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-<!--Materialize html-->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -7,24 +5,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./assets/reset.css">
+    <!--Link tou our styles.css-->
+    <link rel="stylesheet" href="./assets/css/styles.css" type="text/css">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
+        integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
+    <!-- Import Google Fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Playball|Vibes|Cinzel|Merienda&display=swap"
+        rel="stylesheet">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.js"
-        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./assets/styles.css">
-    <title>GrafikRoboto</title>
+
+    <title>Breault Portfolio</title>
+
+    <script src="https://code.jquery.com/jquery.js"></script>
+
 </head>
 
 <body>
+    <div class="pageContainer">
+        <header>
+            <!--Navbar-->
+            <nav class="nav-wrapper grey darken-2" id="mainNavbar">
+                <div class="container">
+                    <a href="#" class="brand-logo cyan-text">Grafik Roboto</a>
+                    <a href="#" class="sidenav-trigger" data-target="slide-out">
+                        <i class="material-icons">menu</i>
+                    </a>
+                    <ul id="navbar-links" class="right hide-on-med-and-down">
+                        <li><a href="./contact.html" class="contactLink lnk navlink">Contact Me</a></li>
+                        <li><a href="./reportIssue.html" class="profileLink lnk navlink">Report Issue</a></li>
+                    </ul>
+                </div>
+            </nav>
 
-    <h1 id="hi">hi</h1>
+            <!--Navbar Phone Menu-->
+            <div>
+                <ul id="slide-out" class="sidenav">
+                    <li>
+                        <div class="user-view">
+                            <div class="background">
+                                <img class="sidenavImg" src="./assets/images/static/sidenav.jpg">
+                            </div>
+                        </div>
+                    </li>
+                    <li class="sidenavItem"><a class="waves-effect sidenavLink cyan-text" href="./contact.html">
+                            <i class="material-icons sidenavIco cyan-text">mail_outline</i>
+                            Contact Me</a>
+                    </li>
+                    <li class="sidenavItem"><a class="waves-effect sidenavLink cyan-text" href="./reportIssue.html">
+                            <i class="material-icons sidenavIco cyan-text">new_releases</i>
+                            Report Issue</a>
+                    </li>
+                </ul>
+            </div>
+        </header>
 
-    <script type="text/javascript" src="./assets/logic.js"></script>
+        <main>
+
+        </main>
+
+
+        <!--Footer-->
+        <footer id="footer" class="page-footer transparent"
+            style="position:absolute;bottom:0;width:100%; height:2.5rem">
+            <div class="footer grey darken-3">
+                <div class="container center footText cyan-text" id="copyright">
+                    © 2019 Copyright
+                </div>
+            </div>
+        </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="./assets/Js/logic.js"></script>
 </body>
 
 </html>
