--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
         integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
     <!-- Import Google Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Playball|Vibes|Cinzel|Merienda&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css?family=Alegreya+Sans|Playball|Vibes|Cinzel|Merienda|Righteous&display=swap"
         rel="stylesheet">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <title>Breault Portfolio</title>
+    <title>GrafikRoboto</title>
 
     <script src="https://code.jquery.com/jquery.js"></script>
 
@@ -27,104 +28,94 @@
 <body>
     <div class="pageContainer">
         <header>
-            <div class="parallax-container">
-                <!--Navbar-->
-                <div class="navbar-fixed">
-                    <nav class="nav-wrapper transparent" id="mainNavbar">
-                        <div class="container">
-                            <a href="#" class="brand-logo center">Grafik Roboto</a>
-                            <a href="#" class="sidenav-trigger" data-target="slide-out">
-                                <i class="material-icons">menu</i>
-                            </a>
-                            <ul id="navbar-links" class="right hide-on-med-and-down">
-                                <li><a href="./contact.html" class="contactLink lnk navlink">Contact Me</a></li>
-                                <li><a href="./reportIssue.html" class="profileLink lnk navlink">Report Issue</a></li>
-                            </ul>
-                        </div>
-                    </nav>
-                </div>
-
-                <!--Navbar Phone Menu-->
-                <div>
-                    <ul id="slide-out" class="sidenav">
-                        <li>
-                            <div class="user-view">
-                                <div class="background">
-                                    <img class="sidenavImg" src="./assets/images/static/sidenav.jpg">
-                                </div>
-                            </div>
-                        </li>
-                        <li class="sidenavItem"><a class="waves-effect sidenavLink cyan-text" href="./contact.html">
-                                <i class="material-icons sidenavIco cyan-text">mail_outline</i>
-                                Contact Me</a>
-                        </li>
-                        <li class="sidenavItem"><a class="waves-effect sidenavLink cyan-text" href="./reportIssue.html">
-                                <i class="material-icons sidenavIco cyan-text">new_releases</i>
-                                Report Issue</a>
-                        </li>
-                    </ul>
-                </div>
+            <div class="parallax-container valign-wrapper center-align">
+                <h1 class="Logo">GRAFIK ROBOTO</h1>
                 <div class="parallax"><img class="parallaxImg" src="./assets/images/static/top_parallax.jpg"></div>
             </div>
         </header>
 
         <main>
-            <ul class="collapsible">
-                <li>
-                    <div class="collapsible-header"><i class="material-icons">filter_drama</i>First</div>
-                    <div class="collapsible-body">
-                        <h1>hi</h1>
+            <div id="mainContainer">
+                <h1 id="shopText">Shop</h1>
+                <ul class="collapsible popout" data-collapsible="accordion">
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons collapseHeadText">camera</i>
+                            <div class="collapseHeadText">Standard</div>
+                        </div>
+                        <div class="collapsible-body">
+                            <span>
+                                <h4 class="placeOrderText center-align">Items</h4>
+                                <hr>
+                                <div class="row">
+                                    <div class="col s12 l4">
+                                        <img src="./assets/images/static/loadingLife.jpg"
+                                            class="responsive-img materialboxed" alt="">
+                                        <h4 class="center-align itemName">Name</h4>
+                                        <h4 class="center-align itemDescription">Description</h4>
+                                    </div>
+                                    <div class="col s12 l4">
+                                        <img src="./assets/images/static/loadingLife.jpg"
+                                            class="responsive-img materialboxed" alt="">
+                                        <h4 class="center-align itemName">Name</h4>
+                                        <h4 class="center-align itemDescription">Description</h4>
+                                    </div>
+                                    <div class="col s12 l4">
+                                        <img src="./assets/images/static/loadingLife.jpg"
+                                            class="responsive-img materialboxed" alt="">
+                                        <h4 class="center-align itemName">Name</h4>
+                                        <h4 class="center-align itemDescription">Description</h4>
+                                    </div>
+                                </div>
+                                <h1 class="center-align placeOrderText">Place order</h1>
+                                <div class="row">
+                                    <div class="col"></div>
+                                </div>
+                            </span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons collapseHeadText">new_releases</i>
+                            <div class="collapseHeadText">Premium</div>
+                        </div>
+                        <div class="collapsible-body pcarousel">
+                            <span>
+
+                            </span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons collapseHeadText">whatshot</i>
+                            <div class="collapseHeadText">In House</div>
+                        </div>
+                        <div class="collapsible-body"><span>
+                            </span></div>
+                    </li>
+                </ul>
+            </div>
+            <div class="parallax-container valign-wrapper center-align">
+                <div class="center-align" id="contactBox">
+                    <h3>For all inqueries and issues:</h3>
+                    <div class="row">
+                        <div class="col s12 l12">
+                            <h5>Contact Us: </h5><i class="material-icons contactBoxIco">email</i>
+                            <h5>Report an issue: </h5><i class="material-icons contactBoxIco">report_problem</i>
+                        </div>
                     </div>
-                </li>
-                <li>
-                    <div class="collapsible-header"><i class="material-icons">place</i>Second</div>
-                    <div class="collapsible-body"><span>
-                            <div class="carousel">
-                                <a class="carousel-item" href="#one!"><img src="./assets/images/static/sidenav.jpg"></a>
-                                <a class="carousel-item" href="#two!"><img src="./assets/images/static/sidenav.jpg"></a>
-                                <a class="carousel-item" href="#three!"><img
-                                        src="./assets/images/static/sidenav.jpg"></a>
-                                <a class="carousel-item" href="#four!"><img
-                                        src="./assets/images/static/sidenav.jpg"></a>
-                                <a class="carousel-item" href="#five!"><img
-                                        src="./assets/images/static/sidenav.jpg"></a>
-                            </div>
-                        </span></div>
-                </li>
-                <li>
-                    <div class="collapsible-header"><i class="material-icons">whatshot</i>Third</div>
-                    <div class="collapsible-body"><span>
-                            <div class="carousel">
-                                <a class="carousel-item" href="#one!"><img src="./assets/images/static/sidenav.jpg"></a>
-                                <a class="carousel-item" href="#two!"><img src="./assets/images/static/sidenav.jpg"></a>
-                                <a class="carousel-item" href="#three!"><img
-                                        src="./assets/images/static/sidenav.jpg"></a>
-                                <a class="carousel-item" href="#four!"><img
-                                        src="./assets/images/static/sidenav.jpg"></a>
-                                <a class="carousel-item" href="#five!"><img
-                                        src="./assets/images/static/sidenav.jpg"></a>
-                            </div>
-                        </span></div>
-                </li>
-            </ul>
-            <div class="carousel center">
-                <a class="carousel-item" href="#one!"><img src="./assets/images/static/sidenav.jpg"></a>
-                <a class="carousel-item" href="#two!"><img src="./assets/images/static/top_parallax.jpg"></a>
-                <a class="carousel-item" href="#three!"><img src="./assets/images/static/sidenav.jpg"></a>
-                <a class="carousel-item" href="#four!"><img src="./assets/images/static/sidenav.jpg"></a>
-                <a class="carousel-item" href="#five!"><img src="./assets/images/static/sidenav.jpg"></a>
+                </div>
+                <div class="parallax"><img class="parallaxImg" src="./assets/images/static/bottom_parallax.jpg">
+                </div>
             </div>
         </main>
 
 
-        <!--Footer-->
+        <!-- Footer
         <footer id="footer" class="page-footer transparent" style="height:2.5rem">
             <div class="footer grey darken-3">
                 <div class="container center footText cyan-text" id="copyright">
                     © 2019 Copyright
                 </div>
             </div>
-        </footer>
+        </footer> -->
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="./assets/Js/logic.js"></script>
