--- a/index.html
+++ b/index.html
@@ -52,24 +52,110 @@
                                             class="responsive-img materialboxed" alt="">
                                         <h4 class="center-align itemName">Name</h4>
                                         <h4 class="center-align itemDescription">Description</h4>
+                                        <h6 class="center-align itemName">$4.20 per sticker</h6>
                                     </div>
                                     <div class="col s12 l4">
                                         <img src="./assets/images/static/loadingLife.jpg"
                                             class="responsive-img materialboxed" alt="">
                                         <h4 class="center-align itemName">Name</h4>
                                         <h4 class="center-align itemDescription">Description</h4>
+                                        <h6 class="center-align itemName">$4.20 per sticker</h6>
                                     </div>
                                     <div class="col s12 l4">
                                         <img src="./assets/images/static/loadingLife.jpg"
                                             class="responsive-img materialboxed" alt="">
                                         <h4 class="center-align itemName">Name</h4>
                                         <h4 class="center-align itemDescription">Description</h4>
+                                        <h6 class="center-align itemName">$4.20 per sticker</h6>
                                     </div>
                                 </div>
+
+
                                 <h1 class="center-align placeOrderText">Place order</h1>
-                                <div class="row">
-                                    <div class="col"></div>
-                                </div>
+                                <div class="placeOrderContainer">
+                                    <div class="row">
+                                        <div class="input-field col s12 l6">
+                                            <select>
+                                                <option value="" disabled selected>Choose your color</option>
+                                                <option value="1">Option 1</option>
+                                                <option value="2">Option 2</option>
+                                                <option value="3">Option 3</option>
+                                            </select>
+                                            <label class="inputLabel center-align">Select Color</label>
+                                        </div>
+                                        <div class="input-field col s12 l6">
+                                            <select>
+                                                <option value="" disabled selected>Choose your size</option>
+                                                <option value="1">Option 1</option>
+                                                <option value="2">Option 2</option>
+                                                <option value="3">Option 3</option>
+                                            </select>
+                                            <label class="inputLabel">Select Size</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <h4 class="col s7 l8 offset-l1 center-align uploadImgText valign-wrapper">Upload
+                                            your image</h4>
+                                        <a class="col s5 l2 waves-effect waves-light btn valign-wrapper"
+                                            id="uploadImgBtn">Browse</a>
+                                    </div>
+                                    <hr>
+                                    <div class="row">
+                                        <form class="col s12">
+                                            <div class="row">
+                                                <div class="input-field col s6">
+                                                    <input id="first_name" type="text" class="validate">
+                                                    <label for="first_name" class="orderInputLabels">First Name</label>
+                                                </div>
+                                                <div class="input-field col s6">
+                                                    <input id="last_name" type="text" class="validate">
+                                                    <label for="last_name" class="orderInputLabels">Last Name</label>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="input-field col s12">
+                                                    <input id="icon_telephone" type="tel" class="validate">
+                                                    <label for="icon_telephone"
+                                                        class="orderInputLabels">Telephone</label>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="input-field col s12">
+                                                    <input id="email" type="email" class="validate">
+                                                    <label for="email" class="orderInputLabels">Email</label>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="input-field col s6">
+                                                    <input id="city" type="text" class="validate">
+                                                    <label for="city" class="orderInputLabels">City</label>
+                                                </div>
+                                                <div class="input-field col s6">
+                                                    <input id="state" type="text" class="validate">
+                                                    <label for="state" class="orderInputLabels">State</label>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="input-field col s12">
+                                                    <input id="address" type="text" class="validate">
+                                                    <label for="address" class="orderInputLabels">Shipping
+                                                        address</label>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="input-field col s12">
+                                                    <input id="zip_code" type="text" class="validate">
+                                                    <label for="zip_code" class="orderInputLabels">Zip code</label>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="row">
+
+                                        <a class="col s12 waves-effect waves-light btn" id="submitOrderBtn">
+                                            <i class="material-icons left">add_circle_outline</i>SUBMIT ORDER</a>
+
+                                    </div>
                             </span>
                         </div>
                     </li>
