place order moved to its own collapsible

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <main>
             <div id="mainContainer">
                 <h1 id="shopText">Shop</h1>
-                <ul class="collapsible popout" data-collapsible="accordion">
+                <ul class="collapsible popout expandable" data-collapsible="accordion">
                     <li>
                         <div class="collapsible-header"><i class="material-icons collapseHeadText">camera</i>
                             <div class="collapseHeadText">Standard</div>
@@ -69,8 +69,32 @@
                                         <h6 class="center-align itemName">$4.20 per sticker</h6>
                                     </div>
                                 </div>
+                            </span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons collapseHeadText">new_releases</i>
+                            <div class="collapseHeadText">Premium</div>
+                        </div>
+                        <div class="collapsible-body pcarousel">
+                            <span>
 
-
+                            </span>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header"><i class="material-icons collapseHeadText">whatshot</i>
+                            <div class="collapseHeadText">In House</div>
+                        </div>
+                        <div class="collapsible-body"><span>
+                            </span></div>
+                    </li>
+                    <li>
+                        <div class="collapsible-header" id="orangeCollapsible"><i
+                                class="material-icons collapseHeadText placeOrderCollapsible">whatshot</i>
+                            <div class="collapseHeadText placeOrderCollapsible">Place Order</div>
+                        </div>
+                        <div class="collapsible-body"><span>
                                 <h1 class="center-align placeOrderText">Place order</h1>
                                 <div class="placeOrderContainer">
                                     <div class="row">
@@ -173,24 +197,6 @@
                                             <i class="material-icons left">add_circle_outline</i>SUBMIT ORDER</a>
 
                                     </div>
-                            </span>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons collapseHeadText">new_releases</i>
-                            <div class="collapseHeadText">Premium</div>
-                        </div>
-                        <div class="collapsible-body pcarousel">
-                            <span>
-
-                            </span>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="collapsible-header"><i class="material-icons collapseHeadText">whatshot</i>
-                            <div class="collapseHeadText">In House</div>
-                        </div>
-                        <div class="collapsible-body"><span>
                             </span></div>
                     </li>
                 </ul>
