flash of unstyled text fix r3

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <body>
     <div class="pageContainer">
         <div class="parallax-container valign-wrapper center-align">
-            <h1 class="Logo">GRAFIK ROBOTO</h1>
+            <h1 class="Logo">GRAFIK kjsbdfhaROBOTO</h1>
             <div class="parallax"><img class="parallaxImg" src="./assets/images/static/top_parallax.jpg"></div>
         </div>
 
