--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+    <!--Link to our styles.css-->
+    <link rel="stylesheet" href="./assets/css/styles.css" type="text/css">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
         integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
@@ -16,8 +19,6 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <!--Link to our styles.css-->
-    <link rel="stylesheet" href="./assets/css/styles.css" type="text/css">
 
     <title>GrafikRoboto</title>
 
@@ -130,7 +131,7 @@
                 </li>
                 <li>
                     <div class="collapsible-header" id="orangeCollapsible"><i
-                            class="material-icons collapseHeadText placeOrderCollapsible">whatshot</i>
+                            class="material-icons collapseHeadText placeOrderCollapsible">add_circle_outline</i>
                         <div class="collapseHeadText placeOrderCollapsible">Place Order</div>
                     </div>
                     <div class="collapsible-body"><span>
