--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 </head>
 
-<body>
+<body style="visibility:hidden;" onload="js_Load()">
     <div class="pageContainer">
         <div class="parallax-container valign-wrapper center-align">
             <h1 class="Logo">GRAFIK ROBOTO</h1>
