contact page forms added

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!--Link to our styles.css-->
-    <link rel="stylesheet" href="./assets/css/styles.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/index.css" type="text/css">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
         integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
@@ -45,21 +45,21 @@
                             <h4 class="placeOrderText center-align">Items</h4>
                             <hr>
                             <div class="row productRow">
-                                <div class="col s12 l4">
+                                <div class="col s12 m6 l4">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">Name</h4>
                                     <h4 class="center-align itemDescription">Description</h4>
                                     <h6 class="center-align itemName">$4.20 per sticker</h6>
                                 </div>
-                                <div class="col s12 l4">
+                                <div class="col s12 m6 l4">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">Name</h4>
                                     <h4 class="center-align itemDescription">Description</h4>
                                     <h6 class="center-align itemName">$4.20 per sticker</h6>
                                 </div>
-                                <div class="col s12 l4">
+                                <div class="col s12 m6 l4">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">Name</h4>
@@ -79,21 +79,21 @@
                             <h4 class="placeOrderText center-align">Items</h4>
                             <hr>
                             <div class="row productRow">
-                                <div class="col s12 l4">
+                                <div class="col s12 m6 l4">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">Holographic</h4>
                                     <h4 class="center-align itemDescription">Description</h4>
                                     <h6 class="center-align itemName">$4.20 per sticker</h6>
                                 </div>
-                                <div class="col s12 l4">
+                                <div class="col s12 m6 l4">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">Chrome</h4>
                                     <h4 class="center-align itemDescription">Description</h4>
                                     <h6 class="center-align itemName">$4.20 per sticker</h6>
                                 </div>
-                                <div class="col s12 l4">
+                                <div class="col s12 m6 l4">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">Glitter</h4>
@@ -112,14 +112,14 @@
                             <h4 class="placeOrderText center-align">Items</h4>
                             <hr>
                             <div class="row productRow">
-                                <div class="col s12 l4 offset-l1">
+                                <div class="col s12 m6 l4 offset-l1">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">House 1</h4>
                                     <h4 class="center-align itemDescription">Description</h4>
                                     <h6 class="center-align itemName">$4.20 per sticker</h6>
                                 </div>
-                                <div class="col s12 l4 offset-l2">
+                                <div class="col s12 m6 l4 offset-l2">
                                     <img src="./assets/images/static/loadingLife.jpg"
                                         class="responsive-img materialboxed" alt="">
                                     <h4 class="center-align itemName">House 2</h4>
