--- a/contact.html
+++ b/contact.html
@@ -17,12 +17,20 @@
         rel="stylesheet">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <title>GrafikRoboto Contact</title>
 
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("user_deAIEYtIkIShexUgNNM3h");
+        })();
+    </script>
 
 </head>
 
@@ -73,14 +81,62 @@
                             <i class="material-icons left">add_circle_outline</i>Send</a>
                     </div>
                 </div>
+                <div class="extrasBox hidden" id="loadingDiv">
+                    <img class="loadingGif" src="./assets/images/static/loading.gif" alt="">
+                </div>
+                <div class="extrasBox hidden" id="thanksDiv">
+                    <h4 class="extrasItems cyan-text">Thanks!</h4>
+                    <h5 class="extrasItems">Your message has been sent.</h5>
+                    <h5 class="extrasItems">Return Home </h5><a href="./index.html"><i
+                            class="material-icons extrasIco">home</i></a>
+                </div>
+                <div class="extrasBox hidden" id="errorDiv">
+                    <h4 class="extrasItems cyan-text">Something went wrong!</h4>
+                    <h5 class="extrasItems">Your message did not go through, please try again later or report it.
+                    </h5>
+                    <div class="row">
+                        <div class="col s6">
+                            <h5 class="extrasItems text-lighten-2">Return Home </h5><a href="./index.html"><i
+                                    class="material-icons extrasIco">home</i></a>
+                        </div>
+                        <div class="col s6">
+                            <h5 class="extrasItems text-lighten-2">Report Error </h5><a href="./reportIssue.html"><i
+                                    class="material-icons extrasIco">error</i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="extrasBox returnHomeBox">
+                    <a href="./index.html">
+                        <h5 class="extrasItems returnHome valign-wrapper">
+                            Return Home<i class="material-icons extrasIco returnHomeIco">home</i>
+                        </h5>
+                    </a>
+                </div>
                 <div id="ourContact">
-                    <h3>Or</h3>
-                    <h4>Contact me at:</h4>
+                    <h4 id="ourContactText">Or contact us at:</h4>
                     <hr width="50%">
-                    <h4>916-730-1571</h4>
-                    <h4>Grafikroboto@yahoo.com</h4>
-                    <h4>@Grafik_roboto</h4>
-
+                    <div class="row">
+                        <div class="col s12 ourInfo">
+                            <h5><i class="material-icons" style="margin: auto 10px;">local_phone</i>916-730-1571</h5>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 ourInfo">
+                            <h5><i class="material-icons" style="margin: auto 10px;">email</i>Grafikroboto@yahoo.com
+                            </h5>
+                        </div>
+                    </div>
+                    <div class="row l6">
+                        <div class="col s12">
+                            <a href="#" class="fa fa-facebook"></a>
+                            <a href="#" class="fa fa-twitter"></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col s12 ourInfo">
+                            <h5>@Grafik_roboto</h5>
+                        </div>
+                    </div>
                 </div>
             </main>
             <!--Footer-->
@@ -96,7 +152,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./assets/Js/logic.js"></script>
+    <script src="./assets/Js/contact.js"></script>
 </body>
 
 </html>
