--- a/reportIssue.html
+++ b/reportIssue.html
@@ -17,12 +17,20 @@
         rel="stylesheet">
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Add icon library -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <title>GrafikRoboto Contact</title>
 
     <script src="https://code.jquery.com/jquery.js"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.3.2/dist/email.min.js"></script>
+    <script type="text/javascript">
+        (function () {
+            emailjs.init("user_deAIEYtIkIShexUgNNM3h");
+        })();
+    </script>
 
 </head>
 
@@ -73,28 +81,35 @@
                             <i class="material-icons left">add_circle_outline</i>Send</a>
                     </div>
                 </div>
-                <div>
-                    <h3>Or</h3>
-                    <br>
-                    <h4>Contact me at:</h4>
-                    <hr width="50%">
-
+                <div class="extrasBox hidden" id="loadingDiv">
+                    <img class="loadingGif" src="./assets/images/static/loading.gif" alt="">
+                </div>
+                <div class="extrasBox hidden" id="thanksDiv">
+                    <h4 class="extrasItems cyan-text">Thanks!</h4>
+                    <h5 class="extrasItems">Your message has been sent.</h5>
+                    <h5 class="extrasItems">Return Home </h5><a href="./index.html"><i
+                            class="material-icons extrasIco">home</i></a>
+                </div>
+                <div class="extrasBox hidden" id="errorDiv">
+                    <h4 class="extrasItems cyan-text">Something went wrong!</h4>
+                    <h5 class="extrasItems">Your message did not go through, please try again later.
+                    </h5>
+                    <h5 class="extrasItems text-lighten-2">Return Home </h5><a href="./index.html"><i
+                            class="material-icons extrasIco">home</i></a>
+                </div>
+                <div class="extrasBox returnHomeBox">
+                    <a href="./index.html">
+                        <h5 class="extrasItems returnHome valign-wrapper">
+                            Return Home<i class="material-icons extrasIco returnHomeIco">home</i>
+                        </h5>
+                    </a>
                 </div>
             </main>
-            <!--Footer-->
-            <footer id="footer" class="page-footer transparent"
-                style="position:absolute;bottom:0;width:100%; height:2.5rem">
-                <div class="footer grey darken-3">
-                    <div class="container center footText cyan-text" id="copyright">
-                        © 2019 Copyright
-                    </div>
-                </div>
-            </footer>
         </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <script src="./assets/Js/logic.js"></script>
+    <script src="./assets/Js/reportIssue.js"></script>
 </body>
 
 </html>
