--- a/reportIssue.html
+++ b/reportIssue.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!--Link to our styles.css-->
-    <link rel="stylesheet" href="./assets/css/contact.css" type="text/css">
+    <link rel="stylesheet" href="./assets/css/repostIssue.css" type="text/css">
     <!-- font awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css"
         integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
@@ -43,8 +43,8 @@
                 </div>
             </header>
             <main>
-                <div id="contactBox">
-                    <h2 id="contactHeader">Send us a message</h2>
+                <div id="issueBox">
+                    <h2 id="issueHeader">Report an issue</h2>
                     <div class="row">
                         <form class="col s12">
                             <div class="row">
@@ -71,41 +71,53 @@
                             <div class="row">
                                 <div class="input-field col s10 offset-s1">
                                     <textarea id="messageBox" class="materialize-textarea"></textarea>
-                                    <label for="messageBox">Leave a message</label>
+                                    <label for="messageBox">Describe your issue</label>
                                 </div>
                             </div>
                         </form>
                     </div>
+                    <div class="file-field input-field">
+                        <h5 class="uploadScreenshotText center-align">Upload
+                            screenshot(if possible)</h5>
+                        <div class="btn" id="uploadScreenshotBtn">
+                            <span>File</span>
+                            <input id="fileInput" type="file">
+                        </div>
+                        <div class="file-path-wrapper">
+                            <input class="file-path validate" type="text">
+                        </div>
+                    </div>
                     <div class="row">
-                        <a class="col s4 offset-s4 waves-effect waves-light btn" id="submitMessageBtn">
+                        <a class="col s4 offset-s4 waves-effect waves-light btn" id="submitIssueBtn">
                             <i class="material-icons left">add_circle_outline</i>Send</a>
                     </div>
                 </div>
-                <div class="extrasBox hidden" id="loadingDiv">
-                    <img class="loadingGif" src="./assets/images/static/loading.gif" alt="">
-                </div>
-                <div class="extrasBox hidden" id="thanksDiv">
-                    <h4 class="extrasItems cyan-text">Thanks!</h4>
-                    <h5 class="extrasItems">Your message has been sent.</h5>
-                    <h5 class="extrasItems">Return Home </h5><a href="./index.html"><i
-                            class="material-icons extrasIco">home</i></a>
-                </div>
-                <div class="extrasBox hidden" id="errorDiv">
-                    <h4 class="extrasItems cyan-text">Something went wrong!</h4>
-                    <h5 class="extrasItems">Your message did not go through, please try again later.
-                    </h5>
-                    <h5 class="extrasItems text-lighten-2">Return Home </h5><a href="./index.html"><i
-                            class="material-icons extrasIco">home</i></a>
-                </div>
-                <div class="extrasBox returnHomeBox">
-                    <a href="./index.html">
-                        <h5 class="extrasItems returnHome valign-wrapper">
-                            Return Home<i class="material-icons extrasIco returnHomeIco">home</i>
-                        </h5>
-                    </a>
-                </div>
-            </main>
         </div>
+        <div class="extrasBox hidden" id="loadingDiv">
+            <img class="loadingGif" src="./assets/images/static/loading.gif" alt="">
+        </div>
+        <div class="extrasBox hidden" id="thanksDiv">
+            <h4 class="extrasItems cyan-text">Thanks!</h4>
+            <h5 class="extrasItems">Your message has been sent.</h5>
+            <h5 class="extrasItems">Return Home </h5><a href="./index.html"><i
+                    class="material-icons extrasIco">home</i></a>
+        </div>
+        <div class="extrasBox hidden" id="errorDiv">
+            <h4 class="extrasItems cyan-text">Something went wrong!</h4>
+            <h5 class="extrasItems">Your message did not go through, please try again later.
+            </h5>
+            <h5 class="extrasItems text-lighten-2">Return Home </h5><a href="./index.html"><i
+                    class="material-icons extrasIco">home</i></a>
+        </div>
+        <div class="extrasBox returnHomeBox">
+            <a href="./index.html">
+                <h5 class="extrasItems returnHome valign-wrapper">
+                    Return Home<i class="material-icons extrasIco returnHomeIco">home</i>
+                </h5>
+            </a>
+        </div>
+        </main>
+    </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
