--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- <script src="./assets/Js/config.js"></script> -->
     <script src="./assets/Js/logic.js"></script>
 </body>
 
