--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                         </form>
                     </div>
                     <div class="row">
-                        <a class="col s4 offset-s4 waves-effect waves-light btn" id="submitMessageBtn">
+                        <a class="col s6 offset-s3 waves-effect waves-light btn" id="submitMessageBtn">
                             <i class="material-icons left">add_circle_outline</i>Send</a>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="row l6">
                         <div class="col s12">
-                            <a href="#" class="fa fa-facebook"></a>
+                            <a href="#" class="fa fa-instagram"></a>
                             <a href="#" class="fa fa-twitter"></a>
                         </div>
                     </div>
