social media linked

--- a/contact.html
+++ b/contact.html
@@ -122,8 +122,9 @@
                     </div>
                     <div class="row l6">
                         <div class="col s12">
-                            <a href="#" class="fa fa-instagram"></a>
-                            <a href="#" class="fa fa-twitter"></a>
+                            <a href="https://www.facebook.com/grafikroboto/" target="_blank" class="fa fa-facebook"></a>
+                            <a href="https://www.instagram.com/grafik_roboto/" target="_blank"
+                                class="fa fa-instagram"></a>
                         </div>
                     </div>
                     <div class="row">
